<resources>
    <string name="app_name">Lab 03 - Shared Preferences</string>
    <string name="top_left">Top Left!</string>
    <string name="top_right">Top Right!</string>
    <string name="bottom_left">Bottom Left!</string>
    <string name="bottom_right">Bottom Right!</string>
    <string name="tlTag">Top Left</string>
    <string name="trTag">Top Right</string>
    <string name="blTag">Bottom Left</string>
    <string name="brTag">Bottom Right</string>
</resources>