<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tLeft"
        android:tag="@string/tlTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/top_left"
        android:textSize="@dimen/textSize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/tRight"
        android:tag="@string/trTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/top_right"
        android:textSize="@dimen/textSize"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/bLeft"
        android:tag="@string/blTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bottom_left"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />
    <TextView
        android:id="@+id/bRight"
        android:tag="@string/brTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bottom_right"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="18sp"
        android:layout_marginStart="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>